Fixed footer/notification z-indexes

--- a/src/components/App/Notifications/style.scss
+++ b/src/components/App/Notifications/style.scss
@@ -2,4 +2,6 @@
   position: fixed;
   bottom: 0;
   left: 0;
+  z-index: 100;
+  background: rgba(#000, 0.1);
 }
